--- a/PassbookLib/PassbookLib.vbproj
+++ b/PassbookLib/PassbookLib.vbproj
@@ -78,7 +78,7 @@
     <Compile Include="Barcode.vb" />
     <Compile Include="Concrete\BoardingPass.vb" />
     <Compile Include="Concrete\Coupon.vb" />
-    <Compile Include="Concrete\IPassStyle.vb" />
+    <Compile Include="Interface\IPassStyle.vb" />
     <Compile Include="Concrete\Pass.vb" />
     <Compile Include="Custom Attributes\DisplayNameAttribute.vb" />
     <Compile Include="Interface\IPass.vb" />
@@ -100,7 +100,6 @@
     </Compile>
     <Compile Include="Passbook.vb" />
     <Compile Include="PassbookImage.vb" />
-    <Compile Include="Utils\PassStyleJsonConverter.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -122,7 +121,9 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
